--- a/FastSaveDelete.csproj
+++ b/FastSaveDelete.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="mod.json" />
+    <Content Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
